Update Mekanism, Gravestone, and More Bees mods

--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -459,266 +459,178 @@ shedding {
     I:Zombie.lexiconDisplaySize=40
     I:Zombie.metadata=0
     I:Zombie.rate=-1
-
-    # Configuration of Shedding for armorplus.ender_dragon_zombie
     S:armorplus.ender_dragon_zombie.item=
     I:armorplus.ender_dragon_zombie.lexiconDisplaySize=40
     I:armorplus.ender_dragon_zombie.metadata=0
     I:armorplus.ender_dragon_zombie.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobChicken1
     S:betteragriculture.EntityMobChicken1.item=
     I:betteragriculture.EntityMobChicken1.lexiconDisplaySize=40
     I:betteragriculture.EntityMobChicken1.metadata=0
     I:betteragriculture.EntityMobChicken1.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobChicken10
     S:betteragriculture.EntityMobChicken10.item=
     I:betteragriculture.EntityMobChicken10.lexiconDisplaySize=40
     I:betteragriculture.EntityMobChicken10.metadata=0
     I:betteragriculture.EntityMobChicken10.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobChicken11
     S:betteragriculture.EntityMobChicken11.item=
     I:betteragriculture.EntityMobChicken11.lexiconDisplaySize=40
     I:betteragriculture.EntityMobChicken11.metadata=0
     I:betteragriculture.EntityMobChicken11.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobChicken2
     S:betteragriculture.EntityMobChicken2.item=
     I:betteragriculture.EntityMobChicken2.lexiconDisplaySize=40
     I:betteragriculture.EntityMobChicken2.metadata=0
     I:betteragriculture.EntityMobChicken2.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobChicken3
     S:betteragriculture.EntityMobChicken3.item=
     I:betteragriculture.EntityMobChicken3.lexiconDisplaySize=40
     I:betteragriculture.EntityMobChicken3.metadata=0
     I:betteragriculture.EntityMobChicken3.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobChicken4
     S:betteragriculture.EntityMobChicken4.item=
     I:betteragriculture.EntityMobChicken4.lexiconDisplaySize=40
     I:betteragriculture.EntityMobChicken4.metadata=0
     I:betteragriculture.EntityMobChicken4.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobChicken5
     S:betteragriculture.EntityMobChicken5.item=
     I:betteragriculture.EntityMobChicken5.lexiconDisplaySize=40
     I:betteragriculture.EntityMobChicken5.metadata=0
     I:betteragriculture.EntityMobChicken5.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobChicken6
     S:betteragriculture.EntityMobChicken6.item=
     I:betteragriculture.EntityMobChicken6.lexiconDisplaySize=40
     I:betteragriculture.EntityMobChicken6.metadata=0
     I:betteragriculture.EntityMobChicken6.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobChicken7
     S:betteragriculture.EntityMobChicken7.item=
     I:betteragriculture.EntityMobChicken7.lexiconDisplaySize=40
     I:betteragriculture.EntityMobChicken7.metadata=0
     I:betteragriculture.EntityMobChicken7.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobChicken8
     S:betteragriculture.EntityMobChicken8.item=
     I:betteragriculture.EntityMobChicken8.lexiconDisplaySize=40
     I:betteragriculture.EntityMobChicken8.metadata=0
     I:betteragriculture.EntityMobChicken8.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobChicken9
     S:betteragriculture.EntityMobChicken9.item=
     I:betteragriculture.EntityMobChicken9.lexiconDisplaySize=40
     I:betteragriculture.EntityMobChicken9.metadata=0
     I:betteragriculture.EntityMobChicken9.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobCow1
     S:betteragriculture.EntityMobCow1.item=
     I:betteragriculture.EntityMobCow1.lexiconDisplaySize=40
     I:betteragriculture.EntityMobCow1.metadata=0
     I:betteragriculture.EntityMobCow1.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobCow10
     S:betteragriculture.EntityMobCow10.item=
     I:betteragriculture.EntityMobCow10.lexiconDisplaySize=40
     I:betteragriculture.EntityMobCow10.metadata=0
     I:betteragriculture.EntityMobCow10.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobCow2
     S:betteragriculture.EntityMobCow2.item=
     I:betteragriculture.EntityMobCow2.lexiconDisplaySize=40
     I:betteragriculture.EntityMobCow2.metadata=0
     I:betteragriculture.EntityMobCow2.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobCow3
     S:betteragriculture.EntityMobCow3.item=
     I:betteragriculture.EntityMobCow3.lexiconDisplaySize=40
     I:betteragriculture.EntityMobCow3.metadata=0
     I:betteragriculture.EntityMobCow3.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobCow4
     S:betteragriculture.EntityMobCow4.item=
     I:betteragriculture.EntityMobCow4.lexiconDisplaySize=40
     I:betteragriculture.EntityMobCow4.metadata=0
     I:betteragriculture.EntityMobCow4.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobCow5
     S:betteragriculture.EntityMobCow5.item=
     I:betteragriculture.EntityMobCow5.lexiconDisplaySize=40
     I:betteragriculture.EntityMobCow5.metadata=0
     I:betteragriculture.EntityMobCow5.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobCow6
     S:betteragriculture.EntityMobCow6.item=
     I:betteragriculture.EntityMobCow6.lexiconDisplaySize=40
     I:betteragriculture.EntityMobCow6.metadata=0
     I:betteragriculture.EntityMobCow6.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobCow7
     S:betteragriculture.EntityMobCow7.item=
     I:betteragriculture.EntityMobCow7.lexiconDisplaySize=40
     I:betteragriculture.EntityMobCow7.metadata=0
     I:betteragriculture.EntityMobCow7.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobCow8
     S:betteragriculture.EntityMobCow8.item=
     I:betteragriculture.EntityMobCow8.lexiconDisplaySize=40
     I:betteragriculture.EntityMobCow8.metadata=0
     I:betteragriculture.EntityMobCow8.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobCow9
     S:betteragriculture.EntityMobCow9.item=
     I:betteragriculture.EntityMobCow9.lexiconDisplaySize=40
     I:betteragriculture.EntityMobCow9.metadata=0
     I:betteragriculture.EntityMobCow9.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobNpcFemale1
     S:betteragriculture.EntityMobNpcFemale1.item=
     I:betteragriculture.EntityMobNpcFemale1.lexiconDisplaySize=40
     I:betteragriculture.EntityMobNpcFemale1.metadata=0
     I:betteragriculture.EntityMobNpcFemale1.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobNpcMale
     S:betteragriculture.EntityMobNpcMale.item=
     I:betteragriculture.EntityMobNpcMale.lexiconDisplaySize=40
     I:betteragriculture.EntityMobNpcMale.metadata=0
     I:betteragriculture.EntityMobNpcMale.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobPig1
     S:betteragriculture.EntityMobPig1.item=
     I:betteragriculture.EntityMobPig1.lexiconDisplaySize=40
     I:betteragriculture.EntityMobPig1.metadata=0
     I:betteragriculture.EntityMobPig1.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobPig10
     S:betteragriculture.EntityMobPig10.item=
     I:betteragriculture.EntityMobPig10.lexiconDisplaySize=40
     I:betteragriculture.EntityMobPig10.metadata=0
     I:betteragriculture.EntityMobPig10.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobPig2
     S:betteragriculture.EntityMobPig2.item=
     I:betteragriculture.EntityMobPig2.lexiconDisplaySize=40
     I:betteragriculture.EntityMobPig2.metadata=0
     I:betteragriculture.EntityMobPig2.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobPig3
     S:betteragriculture.EntityMobPig3.item=
     I:betteragriculture.EntityMobPig3.lexiconDisplaySize=40
     I:betteragriculture.EntityMobPig3.metadata=0
     I:betteragriculture.EntityMobPig3.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobPig4
     S:betteragriculture.EntityMobPig4.item=
     I:betteragriculture.EntityMobPig4.lexiconDisplaySize=40
     I:betteragriculture.EntityMobPig4.metadata=0
     I:betteragriculture.EntityMobPig4.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobPig5
     S:betteragriculture.EntityMobPig5.item=
     I:betteragriculture.EntityMobPig5.lexiconDisplaySize=40
     I:betteragriculture.EntityMobPig5.metadata=0
     I:betteragriculture.EntityMobPig5.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobPig6
     S:betteragriculture.EntityMobPig6.item=
     I:betteragriculture.EntityMobPig6.lexiconDisplaySize=40
     I:betteragriculture.EntityMobPig6.metadata=0
     I:betteragriculture.EntityMobPig6.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobPig7
     S:betteragriculture.EntityMobPig7.item=
     I:betteragriculture.EntityMobPig7.lexiconDisplaySize=40
     I:betteragriculture.EntityMobPig7.metadata=0
     I:betteragriculture.EntityMobPig7.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobPig8
     S:betteragriculture.EntityMobPig8.item=
     I:betteragriculture.EntityMobPig8.lexiconDisplaySize=40
     I:betteragriculture.EntityMobPig8.metadata=0
     I:betteragriculture.EntityMobPig8.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobPig9
     S:betteragriculture.EntityMobPig9.item=
     I:betteragriculture.EntityMobPig9.lexiconDisplaySize=40
     I:betteragriculture.EntityMobPig9.metadata=0
     I:betteragriculture.EntityMobPig9.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobSheep1
     S:betteragriculture.EntityMobSheep1.item=
     I:betteragriculture.EntityMobSheep1.lexiconDisplaySize=40
     I:betteragriculture.EntityMobSheep1.metadata=0
     I:betteragriculture.EntityMobSheep1.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobSheep10
     S:betteragriculture.EntityMobSheep10.item=
     I:betteragriculture.EntityMobSheep10.lexiconDisplaySize=40
     I:betteragriculture.EntityMobSheep10.metadata=0
     I:betteragriculture.EntityMobSheep10.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobSheep2
     S:betteragriculture.EntityMobSheep2.item=
     I:betteragriculture.EntityMobSheep2.lexiconDisplaySize=40
     I:betteragriculture.EntityMobSheep2.metadata=0
     I:betteragriculture.EntityMobSheep2.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobSheep3
     S:betteragriculture.EntityMobSheep3.item=
     I:betteragriculture.EntityMobSheep3.lexiconDisplaySize=40
     I:betteragriculture.EntityMobSheep3.metadata=0
     I:betteragriculture.EntityMobSheep3.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobSheep4
     S:betteragriculture.EntityMobSheep4.item=
     I:betteragriculture.EntityMobSheep4.lexiconDisplaySize=40
     I:betteragriculture.EntityMobSheep4.metadata=0
     I:betteragriculture.EntityMobSheep4.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobSheep5
     S:betteragriculture.EntityMobSheep5.item=
     I:betteragriculture.EntityMobSheep5.lexiconDisplaySize=40
     I:betteragriculture.EntityMobSheep5.metadata=0
     I:betteragriculture.EntityMobSheep5.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobSheep6
     S:betteragriculture.EntityMobSheep6.item=
     I:betteragriculture.EntityMobSheep6.lexiconDisplaySize=40
     I:betteragriculture.EntityMobSheep6.metadata=0
     I:betteragriculture.EntityMobSheep6.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobSheep7
     S:betteragriculture.EntityMobSheep7.item=
     I:betteragriculture.EntityMobSheep7.lexiconDisplaySize=40
     I:betteragriculture.EntityMobSheep7.metadata=0
     I:betteragriculture.EntityMobSheep7.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobSheep8
     S:betteragriculture.EntityMobSheep8.item=
     I:betteragriculture.EntityMobSheep8.lexiconDisplaySize=40
     I:betteragriculture.EntityMobSheep8.metadata=0
     I:betteragriculture.EntityMobSheep8.rate=-1
-
-    # Configuration of Shedding for betteragriculture.EntityMobSheep9
     S:betteragriculture.EntityMobSheep9.item=
     I:betteragriculture.EntityMobSheep9.lexiconDisplaySize=40
     I:betteragriculture.EntityMobSheep9.metadata=0
@@ -735,6 +647,12 @@ shedding {
     I:forestry.butterflyGE.lexiconDisplaySize=40
     I:forestry.butterflyGE.metadata=0
     I:forestry.butterflyGE.rate=-1
+
+    # Configuration of Shedding for gravestone.player_ghost
+    S:gravestone.player_ghost.item=
+    I:gravestone.player_ghost.lexiconDisplaySize=40
+    I:gravestone.player_ghost.metadata=0
+    I:gravestone.player_ghost.rate=-1
 
     # Configuration of Shedding for jurassicraft.brachiosaurus
     S:jurassicraft.brachiosaurus.item=
