--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -88,6 +88,7 @@ crafting {
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog2=true
     B:com.progwml6.natura.overworld.block.logs.BlockRedwoodLog=true
     B:com.progwml6.natura.overworld.block.planks.BlockOverworldPlanks=true
+    B:crazypants.enderio.material.BlockIngotStorage=true
     B:cyano.basemetals.blocks.BlockMetalBlock=true
     B:cyano.basemetals.blocks.BlockMetalOre=true
     B:de.ellpeck.actuallyadditions.mod.blocks.BlockMisc=true
@@ -97,6 +98,7 @@ crafting {
     B:forestry.core.blocks.BlockResourceStorage=true
     B:io.github.elytra.davincisvessels.common.object.block.BlockAS=true
     B:mcjty.rftools.blocks.MachineBase=true
+    B:mcjty.rftools.blocks.MachineFrame=true
     B:moze_intel.projecte.gameObjs.blocks.MatterBlock=true
     B:net.minecraft.block.Block=true
     B:net.minecraft.block.BlockBone=true
@@ -105,6 +107,7 @@ crafting {
     B:net.minecraft.block.BlockGlass=true
     B:net.minecraft.block.BlockGlowstone=true
     B:net.minecraft.block.BlockGrass=true
+    B:net.minecraft.block.BlockGravel=true
     B:net.minecraft.block.BlockNetherBrick=true
     B:net.minecraft.block.BlockNewLog=true
     B:net.minecraft.block.BlockObsidian=true
@@ -113,6 +116,7 @@ crafting {
     B:net.minecraft.block.BlockOre=true
     B:net.minecraft.block.BlockPlanks=true
     B:net.minecraft.block.BlockQuartz=true
+    B:net.minecraft.block.BlockRedstoneLight=true
     B:net.minecraft.block.BlockSand=true
     B:net.minecraft.block.BlockStone=true
     B:net.minecraft.block.BlockWorkbench=true
