Updated a few mods

--- a/config/Mercurius.cfg
+++ b/config/Mercurius.cfg
@@ -84,6 +84,7 @@ general {
             B:io.github.elytra.movingworld.common.asm.coremod=false
             B:ironchest=false
             B:jeibees=false
+            B:journeymap=false
             B:jurassicraft=false
             B:libVulpes=false
             B:llibrary=false
