--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -99,6 +99,7 @@ crafting {
     B:io.github.elytra.davincisvessels.common.object.block.BlockAS=true
     B:mcjty.rftools.blocks.MachineBase=true
     B:mcjty.rftools.blocks.MachineFrame=true
+    B:mekanism.common.block.BlockSalt=true
     B:moze_intel.projecte.gameObjs.blocks.MatterBlock=true
     B:net.minecraft.block.Block=true
     B:net.minecraft.block.BlockBone=true
@@ -109,6 +110,7 @@ crafting {
     B:net.minecraft.block.BlockGrass=true
     B:net.minecraft.block.BlockGravel=true
     B:net.minecraft.block.BlockNetherBrick=true
+    B:net.minecraft.block.BlockNetherrack=true
     B:net.minecraft.block.BlockNewLog=true
     B:net.minecraft.block.BlockObsidian=true
     B:net.minecraft.block.BlockOldLeaf=true
@@ -119,7 +121,10 @@ crafting {
     B:net.minecraft.block.BlockRedstoneLight=true
     B:net.minecraft.block.BlockSand=true
     B:net.minecraft.block.BlockStone=true
+    B:net.minecraft.block.BlockStoneBrick=true
     B:net.minecraft.block.BlockWorkbench=true
+    B:org.jurassicraft.server.block.GypsumStoneBlock=true
+    B:org.jurassicraft.server.block.PlantFossilBlock=true
     B:org.jurassicraft.server.block.tree.AncientLogBlock=true
     B:slimeknights.tconstruct.shared.block.BlockSlimeCongealed=true
     B:slimeknights.tconstruct.world.block.BlockSlimeDirt=true
@@ -128,6 +133,7 @@ crafting {
     B:vazkii.botania.common.block.decor.BlockManaGlass=true
     B:vazkii.quark.building.block.BlockVerticalPlanks=true
     B:vazkii.quark.building.block.BlockWorldStoneBricks=true
+    B:zmaster587.libVulpes.block.BlockOre=true
 }
 
 
