--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -84,6 +84,7 @@ crafting {
     B:WayofTime.bloodmagic.block.BlockBloodStoneBrick=true
     B:WayofTime.bloodmagic.block.BlockRitualStone=true
     B:com.progwml6.natura.nether.block.logs.BlockNetherLog=true
+    B:com.progwml6.natura.nether.block.planks.BlockNetherPlanks=true
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog=true
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog2=true
     B:com.progwml6.natura.overworld.block.logs.BlockRedwoodLog=true
@@ -120,6 +121,7 @@ crafting {
     B:net.minecraft.block.BlockQuartz=true
     B:net.minecraft.block.BlockRedstoneLight=true
     B:net.minecraft.block.BlockSand=true
+    B:net.minecraft.block.BlockSandStone=true
     B:net.minecraft.block.BlockStone=true
     B:net.minecraft.block.BlockStoneBrick=true
     B:net.minecraft.block.BlockWorkbench=true
@@ -130,6 +132,7 @@ crafting {
     B:slimeknights.tconstruct.world.block.BlockSlimeDirt=true
     B:vazkii.botania.common.block.BlockDreamwood=true
     B:vazkii.botania.common.block.BlockLivingrock=true
+    B:vazkii.botania.common.block.BlockLivingwood=true
     B:vazkii.botania.common.block.decor.BlockManaGlass=true
     B:vazkii.quark.building.block.BlockVerticalPlanks=true
     B:vazkii.quark.building.block.BlockWorldStoneBricks=true
