Replace WAILA, WAILA Harvestability, and WAWLA with The One Probe

--- a/config/Mercurius.cfg
+++ b/config/Mercurius.cfg
@@ -115,6 +115,7 @@ general {
             B:simpleretrogen=false
             B:supercraftingframe=false
             B:tconstruct=false
+            B:theoneprobe=false
             B:wawla=false
         }
 
