Add EnderStorage (requires CodeChickenCore) and Progenitori (chunk generator).
Update Forestry.
Refresh EMC.

--- a/config/Mercurius.cfg
+++ b/config/Mercurius.cfg
@@ -29,8 +29,10 @@ general {
             B:Bloodmoon=false
             B:Botania=false
             B:Chameleon=false
+            B:CodeChickenCore=false
             B:CodeChickenLib=false
             B:EnderIO=false
+            B:EnderStorage=false
             B:FML=false
             B:Forge=false
             B:Harvest=false
@@ -104,6 +106,7 @@ general {
             B:nethermetals=false
             B:netherportalfix=false
             B:orespawn=false
+            B:progenitor=false
             B:randomthings=false
             B:refinedstorage=false
             B:rftools=false
