--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -84,6 +84,7 @@ crafting {
     B:WayofTime.bloodmagic.block.BlockBloodRune=true
     B:WayofTime.bloodmagic.block.BlockBloodStoneBrick=true
     B:WayofTime.bloodmagic.block.BlockRitualStone=true
+    B:com.blakebr0.mysticalagriculture.blocks.BaseBlock=true
     B:com.progwml6.natura.nether.block.logs.BlockNetherLog=true
     B:com.progwml6.natura.nether.block.planks.BlockNetherPlanks=true
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog=true
@@ -106,6 +107,7 @@ crafting {
     B:net.minecraft.block.Block=true
     B:net.minecraft.block.BlockBone=true
     B:net.minecraft.block.BlockColored=true
+    B:net.minecraft.block.BlockCompressedPowered=true
     B:net.minecraft.block.BlockDirt=true
     B:net.minecraft.block.BlockGlass=true
     B:net.minecraft.block.BlockGlowstone=true
@@ -129,6 +131,7 @@ crafting {
     B:org.jurassicraft.server.block.GypsumStoneBlock=true
     B:org.jurassicraft.server.block.PlantFossilBlock=true
     B:org.jurassicraft.server.block.tree.AncientLogBlock=true
+    B:slimeknights.tconstruct.shared.block.BlockMetal=true
     B:slimeknights.tconstruct.shared.block.BlockSlimeCongealed=true
     B:slimeknights.tconstruct.world.block.BlockSlimeDirt=true
     B:vazkii.botania.common.block.BlockDreamwood=true
@@ -137,6 +140,7 @@ crafting {
     B:vazkii.botania.common.block.decor.BlockManaGlass=true
     B:vazkii.quark.building.block.BlockVerticalPlanks=true
     B:vazkii.quark.building.block.BlockWorldStoneBricks=true
+    B:vazkii.quark.world.block.BlockBasalt=true
     B:zmaster587.libVulpes.block.BlockOre=true
 }
 
