Chisels and Bits sees another block

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -85,6 +85,7 @@ crafting {
     B:WayofTime.bloodmagic.block.BlockBloodStoneBrick=true
     B:WayofTime.bloodmagic.block.BlockRitualStone=true
     B:com.blakebr0.mysticalagriculture.blocks.BaseBlock=true
+    B:com.knoxhack.nethermetals.blocks.ModBlockOre=true
     B:com.progwml6.natura.nether.block.logs.BlockNetherLog=true
     B:com.progwml6.natura.nether.block.planks.BlockNetherPlanks=true
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog=true
@@ -123,6 +124,7 @@ crafting {
     B:net.minecraft.block.BlockPlanks=true
     B:net.minecraft.block.BlockQuartz=true
     B:net.minecraft.block.BlockRedstoneLight=true
+    B:net.minecraft.block.BlockRedstoneOre=true
     B:net.minecraft.block.BlockSand=true
     B:net.minecraft.block.BlockSandStone=true
     B:net.minecraft.block.BlockStone=true
