--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -84,6 +84,7 @@ crafting {
     B:WayofTime.bloodmagic.block.BlockBloodRune=true
     B:WayofTime.bloodmagic.block.BlockBloodStoneBrick=true
     B:WayofTime.bloodmagic.block.BlockRitualStone=true
+    B:blusunrize.immersiveengineering.common.blocks.BlockIEBase=true
     B:com.blakebr0.mysticalagriculture.blocks.BaseBlock=true
     B:com.knoxhack.nethermetals.blocks.ModBlockOre=true
     B:com.progwml6.natura.nether.block.logs.BlockNetherLog=true
