Update ProjectE. Regenerate EMC

--- a/config/ProjectE/mapping.cfg
+++ b/config/ProjectE/mapping.cfg
@@ -13,7 +13,7 @@ enabledmappers {
     # Add Conversions for Crafting Recipes gathered from net.minecraft.item.crafting.CraftingManager [default: true]
     B:CraftingMapper=true
 
-    #  [default: true]
+    # Uses json files within config/ProjectE/customConversions/ to add values and conversions [default: true]
     B:CustomConversionMapper=true
 
     # Uses the `custom_emc.json` File to add EMC values. [default: true]
