--- a/config/veinminer/modSupport.cfg
+++ b/config/veinminer/modSupport.cfg
@@ -20,6 +20,7 @@ advanced {
     # Tools that need to be treated as special snowflakes
     #  [default: [excompressum:chicken_stick], [excompressum:compressed_hammer_wood], [excompressum:compressed_hammer_stone], [excompressum:compressed_hammer_iron], [excompressum:compressed_hammer_gold], [excompressum:compressed_hammer_diamond], [excompressum:double_compressed_diamond_hammer], [excompressum:compressed_crook]]
     S:special_snowflake_tools <
+        actuallyadditions:itemDrill
         excompressum:chickenStick
         excompressum:compressedHammerWood
         excompressum:compressedHammerStone
