Chisels and Bits sees another block

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -106,6 +106,7 @@ crafting {
     B:moze_intel.projecte.gameObjs.blocks.MatterBlock=true
     B:net.minecraft.block.Block=true
     B:net.minecraft.block.BlockBone=true
+    B:net.minecraft.block.BlockBookshelf=true
     B:net.minecraft.block.BlockColored=true
     B:net.minecraft.block.BlockCompressedPowered=true
     B:net.minecraft.block.BlockDirt=true
@@ -127,6 +128,7 @@ crafting {
     B:net.minecraft.block.BlockRedstoneOre=true
     B:net.minecraft.block.BlockSand=true
     B:net.minecraft.block.BlockSandStone=true
+    B:net.minecraft.block.BlockSlime=true
     B:net.minecraft.block.BlockStone=true
     B:net.minecraft.block.BlockStoneBrick=true
     B:net.minecraft.block.BlockWorkbench=true
