Add BedBugs, BiblioCraft, Pam's HarvestCraft, UniDict, Extreme Reactors, TOP Addons and support mods.
Updated Baubles, bdlib, compatlayer, CraftTweaker, forestry, FTBLib, FTBUtilities, mcjtylib,
MCMultiPart, mysticalagriculture, refined storage, rftools, rftoolsctrl, rftoolsdim, and theoneprobe.

Forge Mod Loader updated to 1.10.2-12.18.3.2221.

Refreshed ProjectE EMC.

--- a/config/Mercurius.cfg
+++ b/config/Mercurius.cfg
@@ -25,6 +25,7 @@ general {
             B:BBG=false
             B:Baubles=false
             B:BetterAchievements=false
+            B:BiblioCraft=false
             B:BloodMagic=false
             B:Bloodmoon=false
             B:Botania=false
@@ -49,6 +50,7 @@ general {
             B:StorageDrawers=false
             B:VeinMiner=false
             B:VeinMinerModSupport=false
+            B:WorldEditCuiFe=false
             B:actuallyadditions=false
             B:actuallycomputers=false
             B:advancedRocketry=false
@@ -56,12 +58,15 @@ general {
             B:appleskin=false
             B:basemetals=false
             B:bdlib=false
+            B:bedbugs=false
             B:betterbuilderswands=false
+            B:bigreactors=false
             B:bloodmoon=false
             B:brandonscore=false
             B:ccl-entityhook=false
             B:chisel=false
             B:chiselsandbits=false
+            B:crafttweakerjei=false
             B:draconicevolution=false
             B:enchiridion=false
             B:endercore=false
@@ -73,6 +78,7 @@ general {
             B:gendustry=false
             B:gravestone=false
             B:guideapi=false
+            B:harvestcraft=false
             B:helpfixer=false
             B:icse=false
             B:immersiveengineering=false
@@ -111,6 +117,11 @@ general {
             B:supercraftingframe=false
             B:tconstruct=false
             B:theoneprobe=false
+            B:topaddons=false
+            B:unidict=false
+            B:wanionlib=false
+            B:worldedit=false
+            B:zerocore=false
         }
 
     }
