--- a/config/mysticalagriculture.cfg
+++ b/config/mysticalagriculture.cfg
@@ -31,6 +31,9 @@ gear {
     # Gear Module enabled? [default: true]
     B:"$gear_module_override"=true
 
+    # Should the 3x3 mining upgraded Supremium Tools be enabled? [default: true]
+    B:aoe_charms=true
+
     # Should uncrafting an upgraded armor/tool give back the charm? [default: true]
     B:charm_return=true
 
@@ -273,7 +276,7 @@ settings {
     # Enable Growth Accelerators? [default: true]
     B:growth_accelerator=true
 
-    # Amount of seconds between each growth tick attempt. [range: 1 ~ 3600, default: 15]
+    # Amount of seconds between each growth tick attempt. [range: 1 ~ 3600, default: 10]
     I:growth_accelerator_speed=15
 
     # Percentage chance for a hostile mob when killed to drop an Inferium Essence. [range: 0 ~ 100, default: 20]
@@ -287,6 +290,9 @@ settings {
 
     # Percentage chance of a second seed dropping. [range: 0 ~ 100, default: 10]
     I:seed_chance=10
+
+    # Should the Seed Reprocessor be enabled? [default: true]
+    B:seed_reprocessor=true
 
     # Amount of Supremium Essence the Wither should drop when killed. [range: 0 ~ 64, default: 2]
     I:wither_supremium=2
