--- a/config/Extreme Reactors/Extreme Reactors.cfg
+++ b/config/Extreme Reactors/Extreme Reactors.cfg
@@ -150,7 +150,6 @@ worldgen {
 
     # World gen will be performed only in the dimensions listed here
     I:dimensionWhitelist <
-        0
      >
 
     # If false, disables all world gen from Extreme Reactors; all other worldgen settings are automatically overridden
@@ -160,7 +159,7 @@ worldgen {
     B:enableWorldRegeneration=true
 
     # If true, dimensionWhitelist will be used as a black list. (Default: false)
-    B:useBlacklist=false
+    B:useBlacklist=true
 
     # User-set world generation version. Increase this by 1 if you want Extreme Reactors to re-run world generation in your world
     I:userWorldGenVersion=1
