Chisels and Bits sees more blocks

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -114,6 +114,7 @@ crafting {
     B:net.minecraft.block.BlockGlowstone=true
     B:net.minecraft.block.BlockGrass=true
     B:net.minecraft.block.BlockGravel=true
+    B:net.minecraft.block.BlockHardenedClay=true
     B:net.minecraft.block.BlockNetherBrick=true
     B:net.minecraft.block.BlockNetherrack=true
     B:net.minecraft.block.BlockNewLeaf=true
@@ -137,6 +138,7 @@ crafting {
     B:org.jurassicraft.server.block.tree.AncientLogBlock=true
     B:slimeknights.tconstruct.shared.block.BlockMetal=true
     B:slimeknights.tconstruct.shared.block.BlockSlimeCongealed=true
+    B:slimeknights.tconstruct.smeltery.block.BlockSeared=true
     B:slimeknights.tconstruct.world.block.BlockSlimeDirt=true
     B:vazkii.botania.common.block.BlockDreamwood=true
     B:vazkii.botania.common.block.BlockLivingrock=true
