Chisels and Bits seens yet another block. Regenerate EMC

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -100,6 +100,7 @@ crafting {
     B:elucent.roots.block.BlockBase=true
     B:"forestry.arboriculture.blocks.log.BlockArbLog$1"=true
     B:"forestry.arboriculture.blocks.log.BlockFireproofVanillaLog$1"=true
+    B:"forestry.arboriculture.blocks.planks.BlockArbPlanks$1"=true
     B:forestry.core.blocks.BlockResourceStorage=true
     B:mcjty.rftools.blocks.MachineBase=true
     B:mcjty.rftools.blocks.MachineFrame=true
