Add Reborn Storage and dependency Reborn Core.
Regenerate EMC.

--- a/config/Mercurius.cfg
+++ b/config/Mercurius.cfg
@@ -106,6 +106,9 @@ general {
             B:orespawn=false
             B:progenitor=false
             B:randomthings=false
+            B:reborncore=false
+            B:reborncore-mcmultipart=false
+            B:rebornstorage=false
             B:refinedstorage=false
             B:rftools=false
             B:rftoolscontrol=false
