Chisels and Bits sees a new block

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -141,6 +141,7 @@ crafting {
     B:slimeknights.tconstruct.shared.block.BlockSlimeCongealed=true
     B:slimeknights.tconstruct.smeltery.block.BlockSeared=true
     B:slimeknights.tconstruct.world.block.BlockSlimeDirt=true
+    B:team.chisel.common.block.BlockCarvable=true
     B:vazkii.botania.common.block.BlockDreamwood=true
     B:vazkii.botania.common.block.BlockLivingrock=true
     B:vazkii.botania.common.block.BlockLivingwood=true
