Update UniDict and Mantle.
Regenerate EMC.

--- a/config/unidict/IntegrationModule.cfg
+++ b/config/unidict/IntegrationModule.cfg
@@ -4,6 +4,7 @@ integrations {
     B:AbyssalCraft=true
     B:AdvancedRocketry=true
     B:AdvancedSolarPanels=false
+    B:AppliedEnergistics2=true
     B:BaseMetals=true
     B:BloodMagic=true
     B:Calculator=false
