Add Tinker Tools Leveling
Regenerate EMC.

--- a/config/Mercurius.cfg
+++ b/config/Mercurius.cfg
@@ -120,6 +120,7 @@ general {
             B:supercraftingframe=false
             B:tconstruct=false
             B:theoneprobe=false
+            B:tinkertoolleveling=false
             B:topaddons=false
             B:unidict=false
             B:wanionlib=false
