Updated MCMultiPart, forestry, Advanced Rocketry, Malisis{Switches,Doors,Core,Blocks} and LibVulpes.
Regenerate EMC.

--- a/config/advRocketry/advancedRocketry.cfg
+++ b/config/advRocketry/advancedRocketry.cfg
@@ -15,6 +15,9 @@ asteroid {
         oreTin
         oreRedstone
      >
+
+    # True if the ores in standardOres should a be blacklist, false for whitelist
+    B:standardOres_blacklist=false
 }
 
 
@@ -86,6 +89,9 @@ general {
         oreRedstone
         oreDiamond
      >
+
+    # True if the ores in laserDrillOres should be a blacklist, false for whitelist
+    B:laserDrillOres_blacklist=false
 
     # If true the orbital laser will actually mine blocks on the planet below
     B:laserDrillPlanet=false
@@ -163,6 +169,9 @@ general {
         oreTin
         oreRedstone
      >
+
+    # True if the ores in geodeOres should be a blacklist, false for whitelist
+    B:geodeOres_blacklist=false
 }
 
 
@@ -172,6 +181,9 @@ performance {
 
     # BitMask: 0: no threading, radius based; 1: threading, radius based (EXP); 2: no threading volume based; 3: threading volume based (EXP)
     I:atmosphereCalculationMethod=0
+
+    # Radius of the O2 vent.  if atmosphereCalculationMethod is 2 or 3 then max volume is calculated from this radius.  WARNING: larger numbers can lead to lag
+    I:oxygenVentSize=32
 }
 
 
