Update Forge Mod Loader to 1.10.2-12.18.3.2239
Refreshed Soartex Fanver resource pack.

Updated the following mods:
Advanced Rocketry 1.10.2-1.0.12
CraftTweaker 1.10.2-3.0.22
Forestry 1.10.2-5.2.17.368
FTB Lib 1.10.2-3.4.2
FTB Utilities 1.10.2-3.4.0
Mystical Agriculture 1.4.2
OpenComputers MC1.10.2-1.6.2.7
Top Addons 1.10.2-0.9.1c

Regenerate EMC.

--- a/config/mysticalagriculture.cfg
+++ b/config/mysticalagriculture.cfg
@@ -10,6 +10,9 @@
     # Essence Apple buff durations in minutes. [range: 1 ~ 100, default: 2]
     I:apple_buff_duration=2
 
+    # Should the Horn of the Wild auto-replant crops? [default: true]
+    B:botania_horn_harvesting=true
+
     # Essence Apples enabled? [default: true]
     B:essence_apples=true
 
@@ -69,6 +72,7 @@ gear {
     I:aluminum_brass_tier=2
     I:aluminum_tier=2
     I:ardite_tier=3
+    I:basalt_tier=2
     I:bronze_tier=3
     I:certus_quartz_tier=3
     I:cobalt_tier=4
@@ -83,8 +87,10 @@ gear {
     I:fluix_tier=4
     I:knightslime_tier=3
     I:lead_tier=3
+    I:limestone_tier=2
     I:manasteel_tier=3
     I:manyullyn_tier=5
+    I:marble_tier=2
     I:mystical_flower_tier=2
     I:nickel_tier=4
     I:osmium_tier=4
@@ -116,6 +122,7 @@ gear {
     B:aluminum_brass_seeds=true
     B:aluminum_seeds=true
     B:ardite_seeds=true
+    B:basalt_seeds=true
     B:bronze_seeds=true
     B:certus_quartz_seeds=true
     B:cobalt_seeds=true
@@ -130,8 +137,10 @@ gear {
     B:fluix_seeds=true
     B:knightslime_seeds=true
     B:lead_seeds=true
+    B:limestone_seeds=true
     B:manasteel_seeds=true
     B:manyullyn_seeds=true
+    B:marble_seeds=true
     B:mystical_flower_seeds=true
     B:nickel_seeds=true
     B:osmium_seeds=true
@@ -332,6 +341,15 @@ world {
 
     # Size of the End Prosperity Ore veins. [range: 0 ~ 100, default: 6]
     I:end_prosperity_veinsize=6
+
+    # Should the end ores generate in the world? [default: true]
+    B:generate_end=true
+
+    # Should the nether ores generate in the world? [default: true]
+    B:generate_nether=true
+
+    # Should the regular ores generate in the world? [default: true]
+    B:generate_regular=true
 
     # Maximum Y level Inferium Ore should spawn. [range: 1 ~ 255, default: 50]
     I:inferium_maxy=50
