--- a/config/advRocketry/advancedRocketry.cfg
+++ b/config/advRocketry/advancedRocketry.cfg
@@ -80,6 +80,9 @@ general {
     S:entityAtmBypass <
      >
 
+    # Amount of force the jetpack provides with respect to gravity, 1 is the same acceleration as caused by Earth's gravity, 2 is 2x the acceleration caused by Earth's gravity, etc.  To make jetpack only work on low gravity planets, simply set it to a value less than 1
+    D:jetPackForce=1.3
+
     # List of oredictionary names of ores allowed to be mined by the laser drill if surface drilling is disabled
     S:laserDrillOres <
         oreIron
@@ -95,6 +98,9 @@ general {
 
     # If true the orbital laser will actually mine blocks on the planet below
     B:laserDrillPlanet=false
+
+    # If true the boots only protect the player on planets with low gravity
+    B:lowGravityBoots=false
 
     # If true the machines from AdvancedRocketry will produce things like plates/rods for other mods even if Advanced Rocketry itself does not use the material (This can increase load time)
     B:makeMaterialsForOtherMods=true
