--- a/config/mysticalagriculture_recipes.cfg
+++ b/config/mysticalagriculture_recipes.cfg
@@ -14,6 +14,13 @@ botania {
 }
 
 
+chisel {
+    I:basalt=16
+    I:limestone=24
+    I:marble=24
+}
+
+
 "common resources" {
     I:cactus=16
     I:chiseled_stonebrick=12
