Updated some mods
CodeChickenLib 1.10.2-2.5.6.233
FTBLib 1.10.2-3.4.4
FTBUtilities 1.10.2-3.4.2
Mystical Agriculture 1.4.3
Natura 1.10.2-4.1.0.24
RFTools 1.1x-5.84
Roguelike Dungeons 1.10.2-1.5.7
Storage Drawers 1.10.2-3.6.1

Updated Soartex Fanver resource pack.

Could not update RFTools due to https://github.com/McJty/RFTools/issues/1065 .

--- a/config/Mercurius.cfg
+++ b/config/Mercurius.cfg
@@ -47,7 +47,9 @@ general {
             B:Psi=false
             B:Quark=false
             B:Roguelike=false
+            B:Sampler=false
             B:StorageDrawers=false
+            B:TickProfiler=false
             B:VeinMiner=false
             B:VeinMinerModSupport=false
             B:WorldEditCuiFe=false
@@ -112,6 +114,7 @@ general {
             B:rftools=false
             B:rftoolscontrol=false
             B:rftoolsdim=false
+            B:roguelike=false
             B:roots=false
             B:rscircuits=false
             B:sgcraft=false
