--- a/config/mysticalagriculture.cfg
+++ b/config/mysticalagriculture.cfg
@@ -83,11 +83,14 @@ gear {
     I:draconium_tier=5
     I:electrical_steel_tier=3
     I:electrum_tier=4
+    I:enderium_tier=5
     I:energetic_alloy_tier=4
     I:fluix_tier=4
+    I:invar_tier=4
     I:knightslime_tier=3
     I:lead_tier=3
     I:limestone_tier=2
+    I:lumium_tier=4
     I:manasteel_tier=3
     I:manyullyn_tier=5
     I:marble_tier=2
@@ -95,6 +98,7 @@ gear {
     I:nickel_tier=4
     I:osmium_tier=4
     I:peridot_tier=4
+    I:platinum_tier=5
     I:pulsating_iron_tier=4
     I:quartz_enriched_iron_tier=3
     I:redstone_alloy_tier=3
@@ -102,6 +106,7 @@ gear {
     I:rubber_tier=2
     I:ruby_tier=4
     I:sapphire=4
+    I:signalum_tier=4
     I:silver_tier=3
     I:soularium_tier=4
     I:steels_tier=4
@@ -133,11 +138,14 @@ gear {
     B:draconium_seeds=true
     B:electrical_steel_seeds=true
     B:electrum_seeds=true
+    B:enderium_seeds=true
     B:energetic_alloy_seeds=true
     B:fluix_seeds=true
+    B:invar_seeds=true
     B:knightslime_seeds=true
     B:lead_seeds=true
     B:limestone_seeds=true
+    B:lumium_seeds=true
     B:manasteel_seeds=true
     B:manyullyn_seeds=true
     B:marble_seeds=true
@@ -145,6 +153,7 @@ gear {
     B:nickel_seeds=true
     B:osmium_seeds=true
     B:peridot_seeds=true
+    B:platinum_seeds=true
     B:pulsating_iron_seeds=true
     B:quartz_enriched_iron_seeds=true
     B:redstone_alloy_seeds=true
@@ -152,6 +161,7 @@ gear {
     B:rubber_seeds=true
     B:ruby_seeds=true
     B:sapphire_seeds=true
+    B:signalum_seeds=true
     B:silver_seeds=true
     B:soularium_seeds=true
     B:steel_seeds=true
