--- a/config/mysticalagriculture_recipes.cfg
+++ b/config/mysticalagriculture_recipes.cfg
@@ -127,10 +127,13 @@ mekanism {
 "oredict resources" {
     I:aluminum=8
     I:bronze=4
+    I:constantan=4
     I:copper=6
     I:electrum=4
+    I:invar=4
     I:lead=4
     I:nickel=4
+    I:platinum=2
     I:rubber=8
     I:silver=4
     I:steel=3
@@ -155,6 +158,13 @@ mekanism {
 
 "refined storage" {
     I:quartz_enriched_iron=8
+}
+
+
+"thermal foundation" {
+    I:enderium=2
+    I:lumium=4
+    I:signalum=4
 }
 
 
