Updated more mods
BedBugs 1.10.2-1.1.5
FTBUtilities 1.10.2-3.4.3
RFTools 1.1x-5.87
UniDict 1.10.2-2.7

Regenerated EMC.

--- a/config/unidict/IntegrationModule.cfg
+++ b/config/unidict/IntegrationModule.cfg
@@ -21,6 +21,7 @@ integrations {
     B:RailCraft=true
     B:RefinedStorage=false
     B:TechReborn=true
+    B:ThermalExpansion=true
     B:WaterPower=false
 }
 
