--- a/config/unidict/UniDict.cfg
+++ b/config/unidict/UniDict.cfg
@@ -1,6 +1,6 @@
 # Configuration file
 
-~CONFIG_VERSION: 1.10.2-2.6b
+~CONFIG_VERSION: 1.10.2-2.7
 
 dump {
     # Enable this to keep track of all the entries.
@@ -144,9 +144,10 @@ resources {
 
     # all the entries will be sorted according to the modID list below
     # must be the exact modID.
-    #  [default: [minecraft], [substratum], [ic2], [mekanism], [immersiveengineering], [techreborn]]
+    #  [default: [minecraft], [thermalfoundation], [substratum], [ic2], [mekanism], [immersiveengineering], [techreborn]]
     S:ownerOfEveryThing <
         minecraft
+        thermalfoundation
         substratum
         ic2
         mekanism
