--- a/config/Mercurius.cfg
+++ b/config/Mercurius.cfg
@@ -72,6 +72,7 @@ general {
             B:enchiridion=false
             B:endercore=false
             B:fastleafdecay=false
+            B:foamfix=false
             B:fodc=false
             B:forestry=false
             B:ftbl=false
