Updated Advanced Rocketry and Roguelike Dungeons
Advanced Rocketry 1.10.2-1.0.13
Roguelike Dungeons 1.10.2-1.5.8

Refreshed Project E EMC.

--- a/config/Mercurius.cfg
+++ b/config/Mercurius.cfg
@@ -17,6 +17,7 @@ general {
 
         mods {
             B:AdvancedRocketry=false
+            B:AdvancedRocketryCore=false
             B:AppleCore=false
             B:Aroma1997Core=false
             B:Aroma1997CoreHelper=false
