--- a/config/Mercurius.cfg
+++ b/config/Mercurius.cfg
@@ -107,6 +107,7 @@ general {
             B:nethermetals=false
             B:netherportalfix=false
             B:orespawn=false
+            B:plustic=false
             B:progenitor=false
             B:randomthings=false
             B:reborncore=false
