--- a/config/mysticalagriculture.cfg
+++ b/config/mysticalagriculture.cfg
@@ -74,6 +74,7 @@ gear {
 "mod support seed tiers" {
     I:aluminum_brass_tier=2
     I:aluminum_tier=2
+    I:amber_tier=4
     I:ardite_tier=3
     I:basalt_tier=2
     I:basalz_tier=3
@@ -89,14 +90,17 @@ gear {
     I:draconium_tier=5
     I:electrical_steel_tier=3
     I:electrum_tier=4
+    I:ender_amethyst_tier=5
     I:enderium_tier=5
     I:energetic_alloy_tier=4
     I:fluix_tier=4
+    I:glowstone_ingot_tier=4
     I:invar_tier=4
     I:knightslime_tier=3
     I:lead_tier=3
     I:limestone_tier=2
     I:lumium_tier=4
+    I:malachite_tier=4
     I:manasteel_tier=3
     I:manyullyn_tier=5
     I:marble_tier=2
@@ -116,8 +120,10 @@ gear {
     I:silver_tier=3
     I:soularium_tier=4
     I:steels_tier=4
+    I:tanzanite_tier=4
     I:terrasteel_tier=5
     I:tin_tier=3
+    I:topaz_tier=4
     I:vibrant_alloy_tier=5
     I:yellorium_tier=5
 }
@@ -132,6 +138,7 @@ gear {
 "mod support seeds" {
     B:aluminum_brass_seeds=true
     B:aluminum_seeds=true
+    B:amber_seeds=true
     B:ardite_seeds=true
     B:basalt_seeds=true
     B:basalz_seeds=true
@@ -147,14 +154,17 @@ gear {
     B:draconium_seeds=true
     B:electrical_steel_seeds=true
     B:electrum_seeds=true
+    B:ender_amethyst_seeds=true
     B:enderium_seeds=true
     B:energetic_alloy_seeds=true
     B:fluix_seeds=true
+    B:glowstone_ingot_seeds=true
     B:invar_seeds=true
     B:knightslime_seeds=true
     B:lead_seeds=true
     B:limestone_seeds=true
     B:lumium_seeds=true
+    B:malachite_seeds=true
     B:manasteel_seeds=true
     B:manyullyn_seeds=true
     B:marble_seeds=true
@@ -174,8 +184,10 @@ gear {
     B:silver_seeds=true
     B:soularium_seeds=true
     B:steel_seeds=true
+    B:tanzanite_seeds=true
     B:terrasteel_seeds=true
     B:tin_seeds=true
+    B:topaz_seeds=true
     B:vibrant_alloy_seeds=true
     B:yellorium_seeds=true
 }
