RFTools 5.90, regenerate Project E EMC

--- a/config/rftools/rftools.cfg
+++ b/config/rftools/rftools.cfg
@@ -115,9 +115,6 @@ builder {
     # If true the quarry will chunkload a chunk at a time. If false the quarry will stop if a chunk is not loaded
     B:quarryChunkloads=true
 
-    # If true the quarry replace with cobblestone instead of dirt
-    B:quarryCobble=false
-
     # Multiply the infusion factor with this value and add that to the quarry base speed
     I:quarryInfusionSpeedFactor=20
 
@@ -542,38 +539,58 @@ livingmatter {
      >
     S:living.24 <
         I
-        minecraft:chicken
+        minecraft:mutton
         1.5
      >
     S:living.25 <
         I
-        minecraft:beetroot
-        0.8
+        minecraft:chicken
+        1.5
      >
     S:living.26 <
         I
-        minecraft:beetroot_seeds
-        0.4
+        minecraft:rabbit
+        1.2
      >
     S:living.27 <
         I
-        minecraft:chorus_fruit
-        1.5
+        minecraft:rabbit_foot
+        1.0
      >
     S:living.28 <
         I
-        minecraft:fish
-        1.5
+        minecraft:rabbit_hide
+        0.5
      >
     S:living.29 <
         I
-        minecraft:reeds
-        1.0
+        minecraft:beetroot
+        0.8
      >
     S:living.3 <
         B
         minecraft:hay_block
         1.5
+     >
+    S:living.30 <
+        I
+        minecraft:beetroot_seeds
+        0.4
+     >
+    S:living.31 <
+        I
+        minecraft:chorus_fruit
+        1.5
+     >
+    S:living.32 <
+        I
+        minecraft:fish
+        1.5
+     >
+    S:living.33 <
+        I
+        minecraft:reeds
+        1.0
      >
     S:living.4 <
         B
@@ -1379,6 +1396,12 @@ powercell {
 
     # How much worse is the simple cell with RF and RF/t
     I:simpleFactor=4
+}
+
+
+quarryreplace {
+    # Use this block for the builder to replace with [default: minecraft:dirt]
+    S:builder=minecraft:dirt
 }
 
 
