Refreshed Project E EMC
Updated mods
  Adanced Rocketry 1.10.2-1.0.16
  Brandon's Core 1.10.2-2.1.6.98
  Chisel 0.0.10.19
  Draconic Evolution 1.10.2-2.0.10.199
  EnderIO 1.10.2-3.1.180
  Ender Storage 1.10.2-2.2.1.106
  Extreme Reactors 1.10.2-0.4.5.28
  Forestry 1.10.2-5.2.17.374
  FTB Lib 1.1x-3.5.4
  FTB Utilities 1.1x-3.5.4
  Mystical Agriculture 1.5.0a
  PlusTiC 4.2.0.1
  Reborn Storage 1.10.2-1.0.2.29
  RFTools 1.1x-5.92
  Storage Drawers 1.10.2-3.7.1
  The One Probe 1.1x-1.4.6
  Zero Core 1.10.2-0.1.0.5

--- a/config/ProjectE/mapping.cfg
+++ b/config/ProjectE/mapping.cfg
@@ -143,6 +143,15 @@ mapperconfigurations {
             # Enable ICarvingGroup with name=blockUranium and oreName=blockUranium [default: true]
             B:blockUranium=true
 
+            # Enable ICarvingGroup with name=block_charcoal and oreName=blockCharcoal [default: true]
+            B:block_charcoal=true
+
+            # Enable ICarvingGroup with name=block_coal and oreName=blockCoal [default: true]
+            B:block_coal=true
+
+            # Enable ICarvingGroup with name=block_coal_coke and oreName=blockFuelCoke [default: true]
+            B:block_coal_coke=true
+
             # Enable ICarvingGroup with name=bloodMagic [default: true]
             B:bloodMagic=true
 
@@ -226,6 +235,54 @@ mapperconfigurations {
 
             # Enable ICarvingGroup with name=cobblestonemossy [default: true]
             B:cobblestonemossy=true
+
+            # Enable ICarvingGroup with name=concrete_black [default: true]
+            B:concrete_black=true
+
+            # Enable ICarvingGroup with name=concrete_blue [default: true]
+            B:concrete_blue=true
+
+            # Enable ICarvingGroup with name=concrete_brown [default: true]
+            B:concrete_brown=true
+
+            # Enable ICarvingGroup with name=concrete_cyan [default: true]
+            B:concrete_cyan=true
+
+            # Enable ICarvingGroup with name=concrete_gray [default: true]
+            B:concrete_gray=true
+
+            # Enable ICarvingGroup with name=concrete_green [default: true]
+            B:concrete_green=true
+
+            # Enable ICarvingGroup with name=concrete_lightblue [default: true]
+            B:concrete_lightblue=true
+
+            # Enable ICarvingGroup with name=concrete_lightgray [default: true]
+            B:concrete_lightgray=true
+
+            # Enable ICarvingGroup with name=concrete_lime [default: true]
+            B:concrete_lime=true
+
+            # Enable ICarvingGroup with name=concrete_magenta [default: true]
+            B:concrete_magenta=true
+
+            # Enable ICarvingGroup with name=concrete_orange [default: true]
+            B:concrete_orange=true
+
+            # Enable ICarvingGroup with name=concrete_pink [default: true]
+            B:concrete_pink=true
+
+            # Enable ICarvingGroup with name=concrete_purple [default: true]
+            B:concrete_purple=true
+
+            # Enable ICarvingGroup with name=concrete_red [default: true]
+            B:concrete_red=true
+
+            # Enable ICarvingGroup with name=concrete_white [default: true]
+            B:concrete_white=true
+
+            # Enable ICarvingGroup with name=concrete_yellow [default: true]
+            B:concrete_yellow=true
 
             # Enable ICarvingGroup with name=diamond and oreName=blockDiamond [default: true]
             B:diamond=true
