--- a/config/brandon3055/DraconicEvolution.cfg
+++ b/config/brandon3055/DraconicEvolution.cfg
@@ -201,6 +201,12 @@ tweaks {
     # (Wuss mode) Setting this to true will disable the chaos guardians ability to respawn healing crystals.
     B:disableGuardianCrystalRespawn=false
 
+    # If true will disable the massive reactor explosion and replace it with a much smaller one.
+    B:disableLargeReactorBoom=false
+
+    # This will disable loot cores (The "Blobs" of items dropped by the tools.).
+    B:disableLootCores=false
+
     # Sets the number of teleports you get per ender pearl with the Advanced Dislocator
     I:dislocatorUsesPerPearl=1
 
@@ -230,6 +236,9 @@ tweaks {
 
     # If set to true items dropped by tools in AOE mode will despawn after 5 seconds if not picked up.
     B:rapidDespawnAOEMinedItems=false
+
+    # Allows you to adjust the overall scale of the reactor explosion. use "disableLargeReactorBoom" to diaable explosion completely.
+    D:reactorExplosionScale=1.0
 
     # Adjusts the fuel usage multiplier of the reactor
     D:reactorFuelUsageMultiplier=1.0
