--- a/config/chisel.cfg
+++ b/config/chisel.cfg
@@ -74,10 +74,14 @@ features {
     B:bronze=true
     B:brownstone=true
     B:carpet=true
+    B:charcoal=true
     B:cloud=true
+    B:coal=true
+    B:coalCoke=true
     B:cobalt=true
     B:cobblestone=true
     B:cobblestonemossy=true
+    B:concrete=true
     B:copper=true
     B:diamond=true
     B:diorite=true
@@ -144,7 +148,7 @@ general {
     # If this is true, you can chisel from the chisel leaves back to vanilla ones. If it is false, you cannot.
     B:chiselBackToVanillaLeaves=false
 
-    # The factor that concrete increases your velocity. Default is 1.35, set to 1 for no change.
+    # The factor that concrete_white increases your velocity. Default is 1.35, set to 1 for no change.
     D:concreteVelocityMult=1.35
     B:doesCloudRenderLikeGhost=true
 }
