--- a/config/advRocketry/advancedRocketry.cfg
+++ b/config/advRocketry/advancedRocketry.cfg
@@ -170,6 +170,12 @@ general {
     B:generateAluminum=true
     B:generateDilithium=true
 
+    # If true then ore-containing geodes are generated on high pressure planets
+    B:generateGeodes=true
+
+    # average size of the geodes
+    I:geodeBaseSize=36
+
     # List of oredictionary names of ores allowed to spawn in geodes
     S:geodeOres <
         oreIron
@@ -181,6 +187,9 @@ general {
 
     # True if the ores in geodeOres should be a blacklist, false for whitelist
     B:geodeOres_blacklist=false
+
+    # variation in geode size
+    I:geodeVariation=24
 }
 
 
