Refreshed Project E EMC.
Updated mods:
  Advanced Rocketry 1.10.2-1.0.17
  LibVulpes 1.10.2-0.1.18

--- a/config/advRocketry/advancedRocketry.cfg
+++ b/config/advRocketry/advancedRocketry.cfg
@@ -59,6 +59,9 @@ general {
 
     # Multiplier for the amount of energy produced by the microwave reciever
     D:MicrowaveRecieverMultiplier=1.0
+
+    # how many millibuckets/t are required to keep the terraformer running
+    I:TerraformerFluidConsumeRate=40
     B:TerraformerRequiresFluids=true
 
     # If true players will respawn near beds on planets IF the spawn location is in a breathable atmosphere
